Mon Apr 18 15:37:35 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_attr): attribute name check added.

	* numeric.c (flo_plus): small typo fix.

Mon Apr 18 11:25:14 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* ext/zlib/zlib.c (zstream_run): fixed SEGV. [ruby-core:4712]

Sun Apr 17 23:57:49 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/extmk.rb (extmake, parse_args): do not expand destdir.

	* ext/extmk.rb (relative_from): treat mere drive letter as an absolute
	  path.

Sat Apr 16 17:01:16 2005  Kouhei Sutou  <kou@cozmixng.org>

	* sample/rss/tdiary_plugin/rss-recent.rb (rss_recent_cache_rss):
	  use the first date information of items as site date information
	  if channel doesn't have date information.

Sat Apr 16 15:27:03 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (RUBY_PROG_INSTALL): not add -p option to INSTALL.
	  files need timestamps to be kept are only ar-archive on a few
	  platforms, and be installed by instruby.rb but not INSTALL.
	  fixed: [ruby-core:04721]

	* mkconfig.rb: purge autoconf value variables.

Sat Apr 16 10:33:48 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* bcc32/Makefile.sub: quick hack... prepend DESTDIR.
	  still have restriction on DESTDIR ("", "/", "e:")

Sat Apr 16 03:59:42 2005  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* ext/openssl/extconf.rb: check for OPENSSL_cleanse.

	* ext/openssl/openssl_missing.h: ditto.

Fri Apr 15 22:40:19 2005  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/tests/testWIN32OLE.rb: add test for WIN32OLE.codepage=

	* ext/win32ole/tests/testOLETYPELIB.rb: correct expected message.

Fri Apr 15 22:04:07 2005  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c(ole_invoke): retry after converting Qnil
	  to VT_EMPTY.

Thu Apr 14 19:05:06 2005  Minero Aoki  <aamine@loveruby.net>

	* parse.y [ripper] (regexp): dispatch regexp option.
	  [ruby-Bugs:1688]

	* ext/ripper/lib/core.rb: regenerated (interface changed).
