@@ -1,3 +1,12 @@
+Tue Apr 19 00:01:08 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* eval.c (search_required, rb_require_safe): expand path in
+	  rb_features.  [ruby-dev:26079]
+
+	* file.c (rb_find_file_ext): return absolute path.
+
+	* ext/extmk.rb: expand path for ext/**/extconf.rb.
+
 Mon Apr 18 15:37:35 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>
 
 	* eval.c (rb_attr): attribute name check added.
